# bpo-project

./: .gitignore  README.rst  pyproject.toml  requirements.txt
bpo/: __main__.py  arik_trial.py  distributions.py  miners.py  planners.py  predicters.py  problems.py  simulator.py  stochastic_scheduling.py  visualizers.py
bpo/resources/: BPI Challenge 2017 - clean Jan Feb.parquet  BPI Challenge 2017 cleaner.py  LICENSES.rst
docs/: .buildinfo  api.html  bpo.__main__.html  bpo.html  bpo.miners.html  bpo.planners.html  bpo.planners.rst  bpo.predicters.html  bpo.predicters.rst  bpo.problems.html  bpo.problems.rst  bpo.resources.BPI Challenge 2017 cleaner.html  bpo.resources.html  bpo.rst  bpo.simulator.html  bpo.visualizers.html  bpo.visualizers.rst  conf.py  genindex.html  howto.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  bpo.__main__.doctree  bpo.doctree  bpo.miners.doctree  bpo.planners.doctree  bpo.predicters.doctree  bpo.problems.doctree  bpo.resources.BPI Challenge 2017 cleaner.doctree  bpo.resources.doctree  bpo.simulator.doctree  bpo.visualizers.doctree  environment.pickle  howto.doctree  index.doctree  modules.doctree
docs/_build/: bpo.html  bpo.planners.html  bpo.problems.html  bpo.visualizers.html  genindex.html  modules.html  py-modindex.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: api.rst.txt  bpo.__main__.rst.txt  bpo.miners.rst.txt  howto.rst.txt  (+4 more)
docsrc/: api.rst  bpo.rst  conf.py  howto.rst  index.rst  modules.rst
sandbox/: TODO.txt  advancedminer.py
(+21 files in other folders)
